finish v1 of MCP server